# AlphaMol

./: .gitignore  AlphaMolStatic  CMakeLists.txt  LGPL-LICENSE.txt  Makefile  README.license  README.md
Alphacx/include/: alfcx.h  alfcx_gmp.h
DataStruct/include/: Atoms.h  Edge.h  Face.h  Tetrahedron.h  Vertex.h
Delcx/include/: delcx.h  delcx.print  sort_tools.h  sos_gmp.h
InOut/include/: ReadInput.h
Notes/: GaussDeriv.tex  WeightedVolumes.tex  unionball.bib
Volumes/include/: Vector.h  gauss_corners.h  tetra.h  volumes.h
examples/: .atvol  .info  1tim.info  Vol1.crd  Vol1.info  Vol10.crd  Vol10.info  Vol100.crd  Vol100.info  Vol2.crd  Vol2.info  Vol3.crd  Vol3.info  Vol30.crd  Vol30.info  Vol4.crd  Vol4.info  Vol500.info  Volume500.crd  mol1.info  test.crd  test2.crd
project/include/: AlphaMol.h
project/src/: AlphaMol.cpp  CheckDeriv.h
